Fixup copilots path resolver and reduce a lot of duplicate code